tests/expectations/compiler/operations/add_type_fail.out
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:3:17
     |
   3 |         return (true + false) as u8;
     |                 ^^^^
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:3:24
     |
   3 |         return (true + false) as u8;
     |                        ^^^^^
